argocd/apps/homarr/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: homarr-app
  name: homarr-httproute
  namespace: homarr
spec:
  hostnames:
  - home.yanello.net
  rules:
  - backendRefs:
    - name: homarr
      namespace: homarr
      port: 7575
      weight: 0
