argocd/apps/homarr/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homarr-vs
spec:
  hosts:
    - home.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: homarr
            port:
              number: 7575
